# FaboEmotionNeedBehavior

./: .gitignore  README.md  build.sh  install_dependences.sh
behavior_module/: CMakeLists.txt
behavior_module/data/: behaviourData.json
behavior_module/include/: BehaviorManager.h
behavior_module/msg/: behavior_list.msg
behavior_module/scripts/: keep_wing_pub.py  sub_beh_feedback.py
behavior_module/src/: BehaviorManager.cpp  behavior_node.cpp
emotion_module/launch/: emotion_model.launch
emotion_module/scripts/: Data_processing.py  Image_talker.py  auto_perception_talker.py  main.py
emotion_module/test/: attitude_talker.py  caculate_test.py  need_satisfy_talker.py  perception_talker.py  perception_talker_input.py
interface_sim/: CMakeLists.txt  sim.cpp
interface_sim/include/: behavior_feedback.cfg  cfg.cfg  need.cfg
interface_sim/launch/: interface_sim_cfg.launch
interface_sim/src/: behavior_feedback_publisher.cpp  need_publisher.cpp  robot_emotion_publisher.cpp
need_module/: .gitignore  CMakeLists.txt
need_module/core/: need_model.cpp  perception_filter.cpp
need_module/data/: InnerNeed.yaml  TaskNeed.yaml
need_module/script/: need_publisher_for_behavior_inter.py  test.py
need_module/src_test/: connection_test.cpp  need_publisher_for_behavior_inter.cpp
perform_module/include/: BtManager.h
perform_module/launch/: behavior.launch  emotion_need.launch
perform_module/src/: BtManager.cpp
personality_template/need/: TaskNeed.yaml
social_msg/: CMakeLists.txt
social_msg/msg/: behavior_list.msg  feedback_msg.msg  perception_msg.msg  register_msg.msg
(+11 files in other folders)
